--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,10 @@ name = "mokapot"
 version = "0.3.0"
 edition = "2021"
 description = "JVM analysis library"
+documentation = "https://docs.rs/mokapot"
 license = "MIT"
+license-file = "LICENSE"
+repository = "https://github.com/henryhchchc/mokapot"
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
