--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
       - run: cargo build --verbose
-      - uses: uses: actions/setup-java@v3
+      - uses: actions/setup-java@v3
         with:
           java-version: 21
       - run: cargo test --verbose
