--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
       - src/**
       - test_data/**
       - Cargo.toml
+      - build.rs
   pull_request:
 
 env: 
@@ -23,10 +24,10 @@ jobs:
           - beta
           - nightly
     steps:
+      - uses: actions/setup-java@v3
       - uses: actions/checkout@v3
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
       - run: cargo build --verbose
-      - uses: actions/setup-java@v3
         with:
           java-version: 21
           distribution: corretto
