--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ repository = "https://github.com/henryhchchc/mokapot"
 bitflags = "2.*"
 itertools = "0.*"
 thiserror = "1.*"
+
+[features]
+experimental = []
