--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,6 @@ jobs:
           distribution: corretto
       - uses: actions/checkout@v3
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
-      - run: cargo build --verbose
-      - run: cargo test --verbose
-      - run: cargo publish --verbose
+      - run: cargo build --all-features --verbose
+      - run: cargo test --all-features --verbose
+      - run: cargo publish --all-features --verbose
