--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+coverage/
 # Created by https://www.toptal.com/developers/gitignore/api/windows,linux,macos,rust,rust-analyzer
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,macos,rust,rust-analyzer
 
