--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,17 +22,11 @@ jobs:
   build_and_test:
     name: MokaPot - latest
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        toolchain:
-          - stable
-          - beta
-          - nightly
     steps:
       - name: Setup Rust
         run: |
-          rustup update ${{ matrix.toolchain }} \
-            && rustup default ${{ matrix.toolchain }} \
+          rustup update stable \
+            && rustup default stable \
             && rustup component add llvm-tools-preview \
             && cargo install grcov
       - uses: actions/setup-java@v3
