--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,9 @@ on:
   push:
     branches: ["main"]
     paths:
-      - src/**
+      - '**.rs'
       - test_data/**
-      - Cargo.toml
-      - build.rs
+      - '**/Cargo.toml'
       - .github/workflows/**
   pull_request:
 
