docs(rustdoc): enable features on nightly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,10 +52,16 @@ jobs:
     name: MokaPot - docs
     runs-on: ubuntu-latest
     steps:
+      - name: Setup Rust
+        run: |
+          rustup update nightly \
+            && rustup default nightly 
       - uses: actions/checkout@v3
         name: Checkout source code
       - run: cargo doc --all-features --no-deps --verbose
         name: Build docs
+        environment:
+            RUSTDOCFLAGS: --cfg unstable
       - name: Fix file permissions
         run: |
           chmod -v -R +rX "target/doc/" | while read line; do
