--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup Rust
-        run: |
-          rustup update stable \
-            && rustup default stable \
-            && rustup component add llvm-tools-preview \
-            && cargo install cargo-llvm-cov
+        run: rustup update stable && rustup default stable 
+      - uses: taiki-e/install-action@cargo-llvm-cov
+        name: Setup Cargo LLVM Cov
+      - uses: taiki-e/install-action@nextest
+        name: Setup Nextest
       - uses: actions/setup-java@v3
         name: Setup JDK
         with:
@@ -39,7 +39,7 @@ jobs:
         name: Build
       - run: cargo test --all-features --verbose
         name: Test
-      - run: cargo llvm-cov --lcov --output-path ./target/lcov.info
+      - run: cargo llvm-cov nextest --lcov --output-path ./target/lcov.info
         name: Coverage
       - uses: codecov/codecov-action@v3
         name: Upload coverage to codecov
