ci(github): upgrade actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,16 +27,15 @@ jobs:
           rustup update stable \
             && rustup default stable \
             && rustup component add llvm-tools-preview
-      - uses: taiki-e/install-action@cargo-llvm-cov
-        name: Setup Cargo LLVM Cov
-      - uses: taiki-e/install-action@nextest
-        name: Setup Nextest
-      - uses: actions/setup-java@v3
-        name: Setup JDK
+      - name: Setup Build Tools
+        uses: taiki-e/install-action@v2
+        tool: cargo-llvm-cov,cargo-nextest
+      - name: Setup JDK
+        uses: actions/setup-java@v3
         with:
           java-version: 21
           distribution: corretto
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         name: Checkout source code
       - run: cargo build --all-features --verbose
         name: Build
@@ -61,7 +60,7 @@ jobs:
         run: |
           rustup update nightly \
             && rustup default nightly
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         name: Checkout source code
       - name: Build docs
         env:
@@ -70,9 +69,9 @@ jobs:
       - name: Fix file permissions
         run: |
           chmod -v -R +rX "target/doc/" | while read line; do
-            echo "::warning title=Invalid file permissions automatically fixed::$line"
+            echo "::info title=Fixed file permissions::$line"
           done
-      - uses: actions/upload-pages-artifact@v2
+      - uses: actions/upload-pages-artifact@v3
         name: Upload docs as github pages artifact
         with:
           path: target/doc
