--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,10 @@ zip = { version = "0.6", optional = true, default-features = false, features = [
   "deflate",
 ] }
 
+[dev-dependencies]
+proptest = "1"
+proptest-derive = "0.4"
+
 
 [features]
 default = ["jar", "petgraph"]
