--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,3 +95,17 @@ jobs:
           path: target/doc
       - uses: actions/deploy-pages@v4
         name: Deploy docs to github pages
+
+  publish_to_crate_io:
+    name: Publish to crate.io
+    runs-on: ubuntu-latest
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+    steps:
+      - run: rustup update && rustup default
+        name: Update Rust
+      - uses: actions/checkout@v4
+        name: Checkout source code
+      - name: Publish to crates.io
+        run: cargo publish --all-features --verbose
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
