--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,15 +62,30 @@ jobs:
                 --all-features \
                 --codecov \
                 --output-path ./target/codecov.json
-      - name: Upload coverage to codecov
+      - name: Upload Coverage Data
+        uses: actions/upload-artifact@v4
+        with:
+          name: codecov.json
+          path: ./target/codecov.json
+
+  codecov:
+    name: Upload Coverage to CodeCov
+    runs-on: ubuntu-latest
+    needs: build_and_test
+    steps:
+      - name: Download Coverage Data
+        uses: actions/download-artifact@v4
+        with:
+          name: codecov.json
+      - name: Upload to codecov
         uses: codecov/codecov-action@v4
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
           files: target/codecov.json
 
-  publish_latest_docs:
-    name: Rust Doc
+  build_doc:
+    name: Generate Rust Doc
     runs-on: ubuntu-latest
     needs: build_and_test
     steps:
@@ -93,6 +108,12 @@ jobs:
         name: Upload docs as github pages artifact
         with:
           path: target/doc
+
+  publish_latest_docs:
+    name: Publish Rustdoc to GitHub Pages
+    runs-on: ubuntu-latest
+    needs: build_doc
+    steps:
       - uses: actions/deploy-pages@v4
         name: Deploy docs to github pages
 
@@ -100,6 +121,9 @@ jobs:
     name: Publish to crate.io
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+    needs:
+      - build_and_test
+      - build_doc
     steps:
       - run: rustup update && rustup default
         name: Update Rust
