--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         run: cargo fmt --check
       - name: Clippy
         run: cargo clippy
-     
+
   build_and_test:
     name: Build & Test
     runs-on: ubuntu-latest
@@ -60,10 +60,10 @@ jobs:
         uses: actions/cache@v4
         with:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          path:
-            - target
-            - ~/.cargo/registry/index/
-            - ~/.cargo/registry/cache/
+          path: |
+            target
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
       - run: cargo check --all-features --verbose
         name: Cargo check
       - name: Test
