--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: code_style_checking
     steps:
+      - name: Cache Rust Build Stuff
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-${{ runner.arch }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
       - name: Setup Rust
         run: |
           rustup update stable \
@@ -58,14 +68,6 @@ jobs:
         name: Checkout source code
       - name: Cargo Update
         run: cargo update --verbose
-      - name: Cache Rust Build Stuff
-        uses: actions/cache@v4
-        with:
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          path: |
-            target
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
       - run: cargo check --all-features --verbose
         name: Cargo check
       - name: Test
@@ -143,8 +145,18 @@ jobs:
       - build_and_test
       - build_doc
     steps:
-      - run: rustup update && rustup default
-        name: Update Rust
+      - name: Cache Rust Build Stuff
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-${{ runner.arch }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+      - name: Setup Rust
+        run: rustup update && rustup default
       - uses: actions/checkout@v4
         name: Checkout source code
       - name: Publish to crates.io
