--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,16 +40,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: code_style_checking
     steps:
-      - name: Cache Rust Build Stuff
-        uses: actions/cache@v4
-        with:
-          key: ${{ runner.os }}-${{ runner.arch }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
       - name: Setup Rust
         run: |
           rustup update stable \
@@ -68,6 +58,15 @@ jobs:
         name: Checkout source code
       - name: Cargo Update
         run: cargo update --verbose
+      - name: Cache Rust Build Stuff
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-${{ runner.arch }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
+          path: |
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
       - run: cargo check --all-features --verbose
         name: Cargo check
       - name: Test
@@ -145,18 +144,19 @@ jobs:
       - build_and_test
       - build_doc
     steps:
+      - name: Setup Rust
+        run: rustup update && rustup default
+      - name: Cargo Update
+        run: cargo update --verbose
       - name: Cache Rust Build Stuff
         uses: actions/cache@v4
         with:
           key: ${{ runner.os }}-${{ runner.arch }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
           path: |
-            ~/.cargo/bin/
             ~/.cargo/registry/index/
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-      - name: Setup Rust
-        run: rustup update && rustup default
       - uses: actions/checkout@v4
         name: Checkout source code
       - name: Publish to crates.io
