--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Cargo Build & Test
+name: CI
 
 on:
   push:
@@ -137,7 +137,7 @@ jobs:
           artifact_name: mokapot-docs
 
   publish_to_crate_io:
-    name: Publish to crate.io
+    name: Publish to crate.io (${{ startsWith(github.ref, 'refs/tags/v') && github.ref_name || 'Skipped' }})
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     needs:
