ci(github): skip doc deployment for PRs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,6 +126,7 @@ jobs:
     name: Publish Rustdoc to GitHub Pages
     runs-on: ubuntu-latest
     needs: build_doc
+    if: ${{ !startsWith(github.ref, 'refs/pull/') }}
     permissions:
       pages: write
       id-token: write
