--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ zip = { version = "0.6", optional = true, default-features = false, features = [
 [dev-dependencies]
 proptest = "1"
 proptest-derive = "0.4"
+walkdir = "2"
+tempdir = "0.3"
+rayon = "1"
 
 
 [features]
