ci(github): exclude dependencies from cargo clippy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Cargo Fmt
         run: cargo fmt --check
       - name: Clippy
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: cargo clippy --no-deps --all-targets --all-features -- -D warnings
 
   build_and_test:
     name: Build & Test
