--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
         run: |
           file_path="${{ env.JAVA_HOME }}/lib/modules"
           hash=$(sha256sum "$file_path" | awk '{print $1}')
-          echo "hash=${hash}" >> $GITHUB_OUTPUT
+          echo "hash=${hash}" >> "$GITHUB_OUTPUT"
       - name: Cache JDK classes
         id: cache-jdk-classes
         uses: actions/cache@v4
@@ -75,7 +75,7 @@ jobs:
           path: jdk_classes/
       - name: Extract JDK classes
         if: steps.cache-jdk-classes.outputs.cache-hit != 'true'
-        run: jimage extract --verbose --dir=./jdk_classes $JAVA_HOME/lib/modules
+        run: jimage extract --verbose --dir=./jdk_classes "$JAVA_HOME/lib/modules"
       - name: Cargo Update
         run: cargo update --verbose
       - name: Cache Rust Build Stuff
@@ -139,7 +139,7 @@ jobs:
         run: cargo doc --all-features --no-deps --verbose
       - name: Fix file permissions
         run: |
-          chmod -v -R +rX "target/doc/" | while read line; do
+          chmod -v -R +rX "target/doc/" | while read -r line; do
             echo "::info title=Fixed file permissions::$line"
           done
       - uses: actions/upload-pages-artifact@v3
