--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -169,6 +169,9 @@ jobs:
     needs:
       - build_and_test
       - build_doc
+    environment:
+      name: crates.io
+      url: https://crates.io/crates/mokapot
     steps:
       - name: Setup Rust
         run: rustup update && rustup default
