ci(github): fix CI trigger

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,10 @@ name: CI
 
 on:
   push:
+    branches: 
+      - main
+      - feat/*
+      - fix/*
     paths-ignore:
       - docs/**
       - "*.md"
